tests/ui/not-repeatable.stderr
error[E0277]: type Ipv4Addr cannot be interpolated inside a repetition
 --> tests/ui/not-repeatable.rs:7:13
  |
7 |     let _ = quote! { #(#ip)* };
  |             ^^^^^^^^^^^^^^^^^^
  |             |
  |             required by a bound introduced by this call
  |
help: the trait `Quote` is not implemented for `Ipv4Addr`
 --> tests/ui/not-repeatable.rs:3:1
  |
3 | struct Ipv4Addr;
  | ^^^^^^^^^^^^^^^
  = help: the trait `ValidQuoteKind` is implemented for `FallbackKind<T>`
  = note: required for `FallbackKind<Ipv4Addr>` to implement `ValidQuoteKind`
  = note: this error originates in the macro `$crate::quote_bind_into_iter` which comes from the expansion of the macro `quote` (in Nightly builds, run with -Z macro-backtrace for more info)
